--- a/08-mapty/starter/index.html
+++ b/08-mapty/starter/index.html
@@ -52,25 +52,17 @@
           </div>
           <div class="form__row">
             <label class="form__label">Duration</label>
-            <input
-              class="form__input form__input--duration"
-              placeholder="min"
-            />
+            <input class="form__input form__input--duration" placeholder="min" />
           </div>
           <div class="form__row">
             <label class="form__label">Cadence</label>
-            <input
-              class="form__input form__input--cadence"
-              placeholder="step/min"
-            />
+            <input class="form__input form__input--cadence" placeholder="step/min" />
           </div>
           <div class="form__row form__row--hidden">
             <label class="form__label">Elev Gain</label>
-            <input
-              class="form__input form__input--elevation"
-              placeholder="meters"
-            />
+            <input class="form__input form__input--elevation" placeholder="meters" />
           </div>
+          
           <button class="form__btn">OK</button>
         </form>
 
